add and remove various files from repo, that might be required or not

--- a/.gitignore
+++ b/.gitignore
@@ -13,13 +13,8 @@ antcn/VLBIsend.py_S14mm_033
 antcn/VLBIsend.py_S14mm_161
 antcn/VLBIsend.py_S197
 antcn/VLBIsend.py_beam
-antcn/antcn.c.apex
-antcn/antcn.c.blazar
-antcn/antcn.c.mk4fs
 antcn/antcn.c.now
 antcn/antcn.c_20111212
-antcn/antcn.c_SM
-antcn/antcn.c_SV
 antcn/antcn.o
 antcn/new_VLBIsend.py_20171201
 antcn/new_VLBIsend.py_20180416
@@ -44,58 +39,13 @@ extra/tcpserver
 extra/udpserver
 hpcounter/bad_hpcounter.c
 hpcounter/hpcounter.x
-include/st_com.i
 include/stcom.h_mk4
-include/stcom.i
-include/tr_com.i
 inject_snap/inject_snap.o
-jbscr/
 make.log
-make_links.sh
 misc/
-rxvt/ChangeLog
-rxvt/Imakefile
-rxvt/LP
-rxvt/README
-rxvt/README.Install
-rxvt/README.greek
-rxvt/_rxvt
-rxvt/a.ps
-rxvt/graphics_sample/
-rxvt/obsescreen
-rxvt/omakefile
-rxvt/r%file
-rxvt/rxfile
-rxvt/rxvt.README
-rxvt/rxvt.man
-rxvt_2005/ChangeLog
-rxvt_2005/Imakefile
-rxvt_2005/LP
-rxvt_2005/README
-rxvt_2005/README.Install
-rxvt_2005/README.greek
-rxvt_2005/a.ps
-rxvt_2005/obsescreen
-rxvt_2005/omakefile
-rxvt_2005/r%file
-rxvt_2005/rxfile
-rxvt_2005/rxvt.README
-rxvt_2005/rxvt.man
-rxvt_2005/rxvt_2005.tar
-rxvt_2011/ChangeLog
-rxvt_2011/INSTALL
-rxvt_2011/Makefile.in
-rxvt_2011/README.configure
-rxvt_2011/W11/
-rxvt_2011/autoconf/
-rxvt_2011/config.log
-rxvt_2011/config.status
-rxvt_2011/configure
-rxvt_2011/doc/
-rxvt_2011/libtool
-rxvt_2011/rclock/
-rxvt_2011/rxvt-2.7.10.lsm
-rxvt_2011/src/
+rxvt/
+rxvt_2005/
+rxvt_2011/
 scripts/
 stalloc/stalloc.o
 sterp/get_err.o
