Make all includes relative

--- a/antcn/Makefile
+++ b/antcn/Makefile
@@ -1,6 +1,6 @@
 #
 CFLAGS= 
-LIBES = ../../fs/poclb/poclb.a ../../st/stlib/stlib.a ../../fs/clib/clib.a\
+LIBES = ../../fs/poclb/poclb.a ../stlib/stlib.a ../../fs/clib/clib.a\
 ../../fs/rtelb/rtelb.a -lm -lnsl
 #
 OBJECTS = antcn.o rad2str.o  # antcn_rpc_client.o antcn_rpc_clnt.o
